# langchain-moonshot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  pytest_standard.txt
.github/workflows/: ci.yml
docs/: design.md  langchain_docs_moonshot.mdx  release_checklist.md
examples/: chatmoonshot_examples.ipynb
langchain_moonshot/: __init__.py
langchain_moonshot/chat_models/: __init__.py  base.py
langchain_moonshot/data/: __init__.py  _profiles.py
scripts/: __init__.py  _common.py  chat_stream_smoke.py  convert_moonshot_docs_to_markdown.py  json_partial_smoke.py  model_matrix_smoke.py  multi_turn_chat_smoke.py  react_agent_smoke.py  tool_call_smoke.py  vision_smoke.py
tests/: __init__.py  conftest.py
tests/integration_tests/: __init__.py  _live_config.py  test_chat_models.py  test_standard.py
tests/unit_tests/: __init__.py  test_chat_models.py  test_imports.py  test_standard.py
tests/unit_tests/__snapshots__/: test_standard.ambr
